--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
     cursor: pointer;
   }
   .back {
-    background: darkblue;
+    background: blueviolet;
     color: white;
     cursor: pointer;
   }
@@ -127,5 +127,5 @@ body {
       margin: 10px 0;
       padding: 0;
     }
-  }
+  
   
