--- a/style.css
+++ b/style.css
@@ -182,3 +182,27 @@ main {
       text-align: center;
   }
 }
+
+/* ... (Your existing styles) ... */
+
+#gameOver {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  z-index: 1000;
+}
+
+#gameOver.hidden {
+  display: none;
+}
+
+/* ... (Your existing styles) ... */
